bugfix: too much space around app-footer causing a scrollbar to show;

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -24,4 +24,13 @@ body, html {
   display: block;
 }
 
+.logo img {
+  width: 100%;
+  height: auto;
+}
 
+app-footer footer {
+  // bugfix: too much space around app-footer causing a scrollbar to show;
+  // a cleaner way would be to change "width: 100vw" to % in footer component but I am not allowed to touch the bb-ui module
+  width: 100% !important;
+}
